--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <h5>喜欢就帮忙分享吧，也可以长按下方二维码识别，赞助作者哟～</h5>
                             <img width="206" height="188" src="reward.jpg"/>
                         </p>
-                        <p>本程序开放源代码，Github地址<a href="https://github.com/Chorder/WiFiQrcode">https://github.com/Chorder/WiFiQrcode</a></p>
+                        <p>本程序开放源代码，Github地址:<br/><a href="https://github.com/Chorder/WiFiQrcode">https://github.com/Chorder/WiFiQrcode</a></p>
                     </div>
                     <div class="col-md-4 col-12"></div>
                 </div>
